# SnakeSFML

./: AssetMng.cpp  CMakeLists.txt  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  README.md  State.h  StateMng.cpp  main.cpp
include/: AssetMng.h  Game.h  GamePlay.h  MainMenu.h  Snake.h  State.h  StateMng.h
src/: AssetMng.cpp  Game.cpp  GamePlay.cpp  MainMenu.cpp  Snake.cpp  StateMng.cpp
